WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52971
ASSERT running run-webkit-tests --threaded
https://bugs.webkit.org/show_bug.cgi?id=52971
Summary
ASSERT running run-webkit-tests --threaded
Geoffrey Garen
Reported
2011-01-22 20:40:32 PST
ASSERT running run-webkit-tests --threaded
Attachments
Patch
(8.42 KB, patch)
2011-01-22 20:43 PST
,
Geoffrey Garen
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2011-01-22 20:43:46 PST
Created
attachment 79862
[details]
Patch
mitz
Comment 2
2011-01-22 20:54:31 PST
Comment on
attachment 79862
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=79862&action=review
> Source/JavaScriptCore/runtime/ConservativeSet.h:46 > + static const size_t inlineCapacity = 128;
The increased inline capacity might be worth mentioning in the change log.
> Source/JavaScriptCore/runtime/ConservativeSet.h:70 > + if (m_set == m_inlineSet) > + return; > + OSAllocator::decommitAndRelease(m_set, m_capacity * sizeof(JSCell*));
I know how to turn this into a 2-line function.
Geoffrey Garen
Comment 3
2011-01-22 21:03:45 PST
Committed
r76457
: <
http://trac.webkit.org/changeset/76457
>
Csaba Osztrogonác
Comment 4
2011-01-24 05:11:58 PST
(In reply to
comment #3
)
> Committed
r76457
: <
http://trac.webkit.org/changeset/76457
>
trunk/runtime directory was committed accidentally,it was removed by
http://trac.webkit.org/changeset/76508
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug